--- a/main.css
+++ b/main.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: Garamond;
     color: #0E0E0E;
     font-size: 14px;
     line-height: 20px;
@@ -33,3 +33,33 @@ body {
     top: 0%;
     height: 15vh;
   }
+
+  .icondiv-left {
+    position: absolute;
+    top: 10%;
+    left: 18rem;
+    display: flex;
+    grid-column-gap: 3vw;
+    grid-row-gap: 3vw;
+  }
+
+  .icon {
+    position: relative;
+    max-width: 100%;
+    max-height: 100%;
+    }
+
+    .icondiv-right {
+        position: absolute;
+        top: 12%;
+        right: 5%;
+        display: flex;
+        grid-column-gap: 3vw;
+        grid-row-gap: 3vw;
+    }
+
+    .icon-right {
+        position: relative;       
+        width: 30%;
+        height: 30%;
+    }
