--- a/main.css
+++ b/main.css
@@ -32,6 +32,7 @@ body {
     left: 2%;
     top: 0%;
     height: 15vh;
+    cursor: pointer;
   }
 
   .icondiv-left {
@@ -47,19 +48,48 @@ body {
     position: relative;
     max-width: 100%;
     max-height: 100%;
+    cursor: pointer;
     }
 
-    .icondiv-right {
-        position: absolute;
-        top: 12%;
-        right: 5%;
-        display: flex;
-        grid-column-gap: 3vw;
-        grid-row-gap: 3vw;
+  .icondiv-right {
+    position: absolute;
+    top: 12%;
+    right: 3%;
+    display: flex;
+    grid-column-gap: 3vw;
+    grid-row-gap: 3vw;
     }
 
-    .icon-right {
-        position: relative;       
-        width: 30%;
-        height: 30%;
+  .icon-right {
+    position: relative;       
+    width: 30%;
+    height: 30%;
+    cursor: pointer;
     }
+
+  .banner {
+    position: absolute;
+    opacity: 0.5;
+    -webkit-filter: blur();
+    filter: blur(3px);
+  }
+
+  .bannerdiv {
+    position: relative;
+  }
+
+  .searchbardiv {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    display: flex;
+    margin-top: 8%;
+    justify-content: space-around;
+    align-items: center;
+  }
+
+  .searchbar  {
+    position: relative;
+    z-index: 1;
+    max-width: 60%;
+  }
