--- a/main.css
+++ b/main.css
@@ -53,22 +53,28 @@ body {
 
   .icondiv-right {
     position: absolute;
-    top: 12%;
-    right: 3%;
+    top: 10%;
+    right: 2%;
     display: flex;
     grid-column-gap: 3vw;
     grid-row-gap: 3vw;
     }
 
   .icon-right {
-    position: relative;       
-    width: 30%;
-    height: 30%;
+    position: relative; 
+    width: 90%;
+    height: 90%;
     cursor: pointer;
     }
 
   .banner {
+    width: 1452px;
+    max-width: 1452px;
     position: absolute;
+    top: 0%;
+    bottom: 0%;
+    left: 0%;
+    right: 0%;
     opacity: 0.5;
     -webkit-filter: blur();
     filter: blur(3px);
@@ -76,20 +82,150 @@ body {
 
   .bannerdiv {
     position: relative;
+    width: 100vw;
   }
 
-  .searchbardiv {
-    position: absolute;
-    left: 0%;
-    right: 0%;
+  .searchbardiv  {
+    position: relative;
+    left: -21%;
+    top: 6vh;
+    right: -20%;
     display: flex;
-    margin-top: 8%;
-    justify-content: space-around;
+    width: 50vw;
+    height: 30vh;
+    margin-left: auto;
+    padding-bottom: 0px;
+    justify-content: flex-start;
     align-items: center;
   }
 
-  .searchbar  {
-    position: relative;
-    z-index: 1;
-    max-width: 60%;
+  input[type=text], select, textarea {
+    position: absolute;
+    width: 45vw;
+    left: -3%;
+    top: 22%;
+    right: 0%;
+    bottom: auto;
+    padding-left: 11px;
+    height: 4vh;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #d7ca89;
+    border-radius: 20px;
+    background-color: transparent;
+    color: white;
+    text-indent: 8px;
+    font-family: Garamond;
+    font-size: 18px;
   }
+
+  ::placeholder{
+    color: white;
+    opacity: 95%;
+    font-family: Garamond;
+    font-size: 18px;
+  }
+
+  .submit {
+    position: absolute;
+    left: 85%;
+    top: 26%;
+    right: 0%;
+    bottom: 0%;
+  }
+
+  .categorysearch {
+    position: absolute;
+    left: 0%;
+    top: 65%;
+    right: 0%;
+    bottom: 0%;
+    display: flex;
+    margin-left: -11%;
+    justify-content: space-around;
+  }
+
+  #BodyType {
+    position: relative;
+    left: 27vw;
+    right: 0%;
+    top: auto;
+    bottom: auto;
+    height: 4vh;
+    max-width: 19vw;
+    min-width: 17vw;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #d7ca89;
+    border-radius: 20px;
+    background-color: transparent;
+  }
+
+  .categorysearchtext {
+    position: relative;
+    left: 18px;
+    bottom: 11px;
+    color: white;
+    opacity: 95%;
+    font-family: Garamond;
+    font-size: 18px;
+  }
+
+  #categorysearcharrow-1 {
+    position: relative;
+    left: 14.5vw;
+    right: auto;
+    bottom: 6vh;
+    top: auto;
+  }
+
+  #categorysearcharrow-2 {
+    position: relative;
+    left: 14.5vw;
+    right: auto;
+    bottom: 6vh;
+    top: auto;
+  }
+
+  #Make {
+    position: relative;
+    left: 6vw;
+    right: 0%;
+    top: auto;
+    bottom: auto;
+    height: 4vh;
+    max-width: 19vw;
+    min-width: 17vw;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #d7ca89;
+    border-radius: 20px;
+    background-color: transparent;
+  }
+
+  #SearchButton {
+    position: relative;
+    left: -13.5%;
+    right: 0%;
+    top: auto;
+    bottom: auto;
+    height: 4vh;
+    max-width:7vw;
+    min-width: 7vw;
+    border-style: solid;
+    border-width: 2px;
+    border-color: #d7ca89;
+    border-radius: 20px;
+    background-color: transparent;
+  }
+  
+  .categorysearchtext-search {
+    position: relative;
+    left: 1.85vw;
+    bottom: 12px;
+    color: white;
+    opacity: 95%;
+    font-family: Garamond;
+    font-size: 18px;
+  }
+  
