--- a/main.css
+++ b/main.css
@@ -1,6 +1,6 @@
 body {
     font-family: Garamond;
-    color: #0E0E0E;
+    color: #0e0e0e;
     font-size: 14px;
     line-height: 20px;
   }
@@ -19,8 +19,8 @@ body {
   
   .navsec {
     position: relative;
-    width: 100vw;
     height: 10vh;
+    background-color: black;
   }
   
   .navdiv {
@@ -68,12 +68,12 @@ body {
     }
 
   .bannersec {
-      height: 40vh;
+    height: 40vh;
   }
 
   .banner {
-    width: 1452px;
-    max-width: 1452px;
+    width: 1420px;
+    max-width: 1420px;
     position: absolute;
     top: 0%;
     bottom: 0%;
@@ -86,7 +86,6 @@ body {
 
   .bannerdiv {
     position: relative;
-    width: 100vw;
   }
 
   .searchbardiv  {
@@ -284,12 +283,258 @@ body {
   }
       
   .productsec  {
-    height: 160vh;
+    height: 180vh;
   }
- 
+
+  #productcolumn {
+    height: 176vh;
+    display: flex;
+  }
+
+  #productcolumn-left {
+    position: relative;
+    height: 160vh;
+    flex: 30%;
+  }
+
+  #productcolumn-right {
+    position: relative;
+    height: 176vh;
+    flex: 70%;
+  }
+
+  .grid {
+    display: grid;
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    grid-auto-rows: 1fr;
+    border-right: 1px solid #d7ca89;
+  }
+
+  .grid-top {
+    height: 76vh;
+    top: 2%;
+    bottom: auto;
+    left: -3.5%;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto auto auto;
+    grid-template-areas: "Area1"
+    "Area2"
+    "Area3";
+  }
+
+  .gridtopdiv {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+  }
+
+  .gridtopdiv-1 {
+    grid-area: Area1;
+    grid-row: 0;
+    grid-column: 1;
+  }
+
+  .gridtopdiv-2 {
+    grid-row: 2;
+    grid-column: 1;
+    grid-area: Area2;
+  }
+
+  .gridtopdiv-3 {
+    grid-row: 3;
+    grid-column: 1;
+    grid-area: Area3;
+  }
+
+  .headingdiv {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    height: 25%;
+  }
+  
+  .headingdivtext {
+    font-family: Garamond;
+    font-size: 24px;
+    color: #d7ca89;
+    position: absolute;
+    left: 8%;
+    right: 0%;
+    bottom: 0%;
+    top: auto;
+
+  }
+
+  .scrollbardiv {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: auto;
+    bottom: 0%;
+    height: 75%;
+  }
+
+  .scrollbar {
+    padding-left: 10%;
+    width: 25vw;
+  }
+
+  .grid-bottom {
+    height: 100vh;
+    top: auto;
+    bottom: -10%;
+    gap: 0px;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1.5fr;
+  }
+
+  .gridcolumn {
+    position: relative;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+  }
+
+  .gridcolumn-left {
+    height: 100%;
+  }
+
+  #gdl1 {
+    grid-area: 1/1/2/2;
+  }
+
+  #gdl2 {
+    grid-area: 2/1/3/2;
+  }
+
+  #gdl3 {
+    grid-area: 3/1/4/2;
+  }
+
+  #gdl4 {
+    grid-area: 4/1/5/2;
+  }
+
+  #gdl5 {
+    grid-area: 5/1/6/2;
+  }
+
+  #gdl6 {
+    grid-area: 6/1/7/2;
+  }
+
+  #gdl7 {
+    grid-area: 7/1/8/2;
+  }
+
+  #gdl8 {
+    grid-area: 8/1/9/2;
+  }
+
+  #gdr1 {
+    grid-area: 1/2/2/3;
+  }
+
+  #gdr2 {
+    grid-area: 2/2/3/3;
+  }
+
+  #gdr3 {
+    grid-area: 3/2/4/3;
+  }
+
+  #gdr4 {
+    grid-area: 4/2/5/3;
+  }
+
+  #gdr5 {
+    grid-area: 5/2/6/3;
+  }
+
+  #gdr6 {
+    grid-area: 6/2/7/3;
+  }
+
+  #gdr7 {
+    grid-area: 7/2/8/3;
+  }
+
+  #gdr8 {
+    grid-area: 8/2/9/3;
+  }
+
+  #feature {
+    grid-area: 9/1/10/3;
+    height: 60%;
+    margin-top: 3.7vh;
+    background-image: linear-gradient(90deg, #0e0e0e, #000 50%, #0e0e0e);
+    background-clip: border-box;
+  }
+
+  .category {
+    position: absolute;
+    left: 7.5%;
+    right: 0%;
+    top: auto;
+    bottom: 12%;
+    font-family: Garamond;
+    font-size: 24px;
+    color: #d7ca89;
+  }
+
+  .featuretext {
+    left: 4%;
+    bottom: 6.5%;
+  }
+
+  .categorydropdown {
+    position: absolute;
+    left: 0%;
+    right: 0%;
+    top: auto;
+    bottom: 0%;
+    width: 87%;
+    height: 40px;
+    border: 1px solid #d7ca89;
+    border-radius: 20px;
+  }
+
+  .categorydropdowntext {
+    position: relative;
+    left: 10%;
+    right: auto;
+    top: 24%;
+    bottom: auto;
+    display: inline-block;
+    font-family: Garamond;
+    font-size: 16px;
+    color: white;
+  }
+
+  .categoryarrows {
+    position: absolute;
+    left: auto;
+    top: 25%;
+    right: 6%;
+    bottom: 0%;
+  }
+
+  .featurearrow {
+    top: 91.1%;
+    right: 8.7%;
+  }
+
   .bottomsec {
     position: relative;
     height: 60vh;
+    background-color: black;
   }
 
   #map {
@@ -371,7 +616,6 @@ body {
     top: 0%;
     width: 12vw;
     height: 15vh;
-
   }
 
   #bottom-info {
@@ -413,4 +657,3 @@ body {
     bottom: auto;
     height: 10vh;
   }
-
