--- a/main.css
+++ b/main.css
@@ -1,3 +1,6 @@
+
+/* homepage */
+
 body {
     font-family: Garamond;
     color: #0e0e0e;
@@ -275,7 +278,8 @@ body {
   }
       
   .productsec  {
-    height: 190vh;
+    height: 200vh;
+    position: relative;
   }
 
   #productcolumn {
@@ -700,6 +704,14 @@ body {
     height: 10vh;
   }
 
+  #p1 {
+    cursor: pointer;
+  }
+
+  #p1:hover {
+    filter: brightness(80%);
+  }
+  
   #p4 {
     cursor: pointer;
   }
@@ -790,5 +802,542 @@ body {
   }
 
 
-  /* the end */
-  /* 
+  /* comparison page */
+
+  .comparisonsec {
+    height: 3900px;
+    position: relative;
+  }
+
+  #comparisondisplay {
+    position: absolute;
+    width: 89vw;
+    height: 38vw;
+    left: 5vw;
+    top: 6%;
+    bottom: auto;
+    background-image: linear-gradient(90deg, #0e0e0e, #000 50%, #0e0e0e);
+  }
+
+  #comparisondisplay-grid {
+    position: absolute;
+    left: 2vw;
+    top: 0%;
+    bottom: auto;
+    display: grid; 
+    width: 85vw;
+    height: 38vw;
+    grid-template-columns: repeat(6, 12.5vw); 
+    grid-template-rows: repeat(4, 12.5vw); 
+    gap: 0 2vw;
+  }
+
+  .acmore {
+    position: relative;
+    top: -18%;
+    left: 4.5vw;
+    right: 0%;
+  }
+
+  .sidepic {
+    display: flex;
+  }
+
+  #acura { 
+    grid-area: 2 / 2 / 4 / 4; 
+  }
+
+  #cadillac { 
+    grid-area: 2 / 4 / 4 / 6;
+  }
+
+  .ac {
+    flex-grow: 1;
+  }
+
+  .actext {
+    font-family: Garamond;
+    font-size: 1.75vw;
+    color: #d7ca89;
+    display: flex;
+    align-items: end;
+    justify-content: center;
+    padding-bottom: 3%;
+  }
+
+  #a1d { 
+    grid-area: 1 / 1 / 2 / 2; 
+    align-items: end;
+  }
+
+  #a2d { 
+    grid-area: 2 / 1 / 3 / 2;
+  }
+
+  #a3d { 
+    grid-area: 3 / 1 / 4 / 2; 
+    align-items: start;
+  }
+
+  #c1d { 
+    grid-area: 1 / 6 / 2 / 7; 
+    align-items: end;
+  }
+
+  #c2d {
+    grid-area: 2 / 6 / 3 / 7; 
+  }
+
+  #c3d { 
+    grid-area: 3 / 6 / 4 / 7; 
+    align-items: start;
+  }
+
+  #a-text { 
+    grid-area: 1 / 2 / 2 / 4; 
+  }
+
+  #c-text { 
+    grid-area: 1 / 4 / 2 / 6; 
+  }
+
+  #a-more { 
+    grid-area: 4 / 1 / 5 / 2; 
+  }
+
+  #c-more { 
+    grid-area: 4 / 6 / 5 / 7;
+  }
+
+  #stats {  
+    display: grid;
+    grid-template-rows: 2fr 2fr 2fr;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: 1fr;
+    gap: 140px 20%;
+    grid-auto-flow: row;
+    position: absolute;
+    left: 30%;
+    right: 0%;
+    top: 65vw;
+    height: 250vh;
+    width: 40vw;
+  }
+  
+  .s1 {  
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(10, 70px);
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  
+  .s2 {  
+    display: grid;
+    grid-template-rows: repeat(9, 70px);
+    grid-template-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  
+  .s3 {  
+    display: grid;
+    grid-template-rows: repeat(17, 70px);
+    grid-template-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+    grid-area: 3 / 1 / 4 / 2;
+  }
+
+  .colorbar  {
+    background-color: #949285;
+  }
+
+  .item {
+    font-family: Garamond;
+    font-size: 24px;
+    color: #d7ca89;
+    display: flex;
+    justify-content: center;
+  }
+
+  .statstitle {
+    font-family: Garamond;
+    font-size: 30px;
+    color: #d7ca89;
+    display: flex;
+    justify-content: center;
+    position: relative;
+    top: 35%;
+  }
+
+  .leftdata {
+    font-family: Garamond;
+    font-size: 18px;
+    position: relative;
+    left: 1%;
+    top: 32%;
+    color: white;
+    display: inline;
+    justify-content: start;
+  }
+
+  .rightdata {
+    font-family: Garamond;
+    font-size: 18px;
+    position: relative;
+    right: 1%;
+    top: -26%;
+    color: white;
+    display: flex;
+    font-size: 18px;
+    justify-content: end;
+  }
+
+  .statsstate-left {
+    position: relative;
+    height: 24%;
+    left: 2%;
+    right: auto;
+    top: 32%;
+  }
+
+  .statsstate-right {
+    position: relative;
+    height: 24%;
+    right: -94%;
+    top: -26%;
+  }
+
+  .s1-1 { grid-area: 1 / 1 / 2 / 2; }
+  .s1-2 { grid-area: 2 / 1 / 3 / 2; }
+  .s1-3 { grid-area: 3 / 1 / 4 / 2; }
+  .s1-4 { grid-area: 4 / 1 / 5 / 2; }
+  .s1-5 { grid-area: 5 / 1 / 6 / 2; }
+  .s1-6 { grid-area: 6 / 1 / 7 / 2; }
+  .s1-7 { grid-area: 7 / 1 / 8 / 2; }
+  .s1-8 { grid-area: 8 / 1 / 9 / 2; }
+  .s1-9 { grid-area: 9 / 1 / 10 / 2; }
+  .s1-10 { grid-area: 10 / 1 / 11 / 2; }
+  .s2-1 { grid-area: 1 / 1 / 2 / 2; }
+  .s2-2 { grid-area: 2 / 1 / 3 / 2; }
+  .s2-3 { grid-area: 3 / 1 / 4 / 2; }
+  .s2-4 { grid-area: 4 / 1 / 5 / 2; }
+  .s2-5 { grid-area: 5 / 1 / 6 / 2; }
+  .s2-6 { grid-area: 6 / 1 / 7 / 2; }
+  .s2-7 { grid-area: 7 / 1 / 8 / 2; }
+  .s2-8 { grid-area: 8 / 1 / 9 / 2; }
+  .s2-9 { grid-area: 9 / 1 / 10 / 2; }
+  .s3-1 { grid-area: 1 / 1 / 2 / 2; }
+  .s3-2 { grid-area: 2 / 1 / 3 / 2; }
+  .s3-3 { grid-area: 3 / 1 / 4 / 2; }   
+  .s3-4 { grid-area: 4 / 1 / 5 / 2; }
+  .s3-5 { grid-area: 5 / 1 / 6 / 2; }
+  .s3-6 { grid-area: 6 / 1 / 7 / 2; }
+  .s3-7 { grid-area: 7 / 1 / 8 / 2; }
+  .s3-8 { grid-area: 8 / 1 / 9 / 2; }
+  .s3-9 { grid-area: 9 / 1 / 10 / 2; }
+  .s3-10 { grid-area: 10 / 1 / 11 / 2; }
+  .s3-11 { grid-area: 11 / 1 / 12 / 2; }
+  .s3-12 { grid-area: 12 / 1 / 13 / 2; }
+  .s3-13 { grid-area: 13 / 1 / 14 / 2; }
+  .s3-14 { grid-area: 14 / 1 / 15 / 2; }
+  .s3-15 { grid-area: 15 / 1 / 16 / 2; }
+  .s3-16 { grid-area: 16 / 1 / 17 / 2; }
+  .s3-17 { grid-area: 17 / 1 / 18 / 2; }
+  
+  /* product page */
+
+  .productsec2 {
+    height: 240vh;
+    position: relative;
+  }
+
+  #productlink {
+    display: block;
+    position: absolute;
+    width: 22vw;
+    height: 14.4%;
+    top: 18.8%;
+    left: 2.5%;
+    z-index: 2;
+  }
+
+  #productlink:hover {
+    background-color: #000;
+    opacity: 20%;
+  }
+
+  .productinfo-column {  
+    display: grid;
+    position: absolute;
+    left: 9.5%;
+    right: 0%;
+    top: 3%;
+    bottom: 0%;
+    height: 4fr;
+    width: 80vw;
+    grid-template-columns: 1.2fr 0.8fr;
+    grid-template-rows: 1.45fr 0.9fr 1fr 0.9fr;
+    gap: 0px 0px;
+  }
+  
+  .display { 
+    grid-area: 1 / 1 / 2 / 2; 
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1.4fr 0.6fr;
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+  }
+  
+  .thumbnails { 
+    grid-area: 2 / 1 / 3 / 2; 
+    position: relative;
+  }
+  
+  .specifications { 
+    grid-area: 3 / 1 / 4 / 2; 
+  }
+  
+  .disclaimer { 
+    grid-area: 4 / 1 / 5 / 2; 
+  }
+  
+  .checkout {
+    grid-area: 1 / 2 / 2 / 3; 
+    position: relative;
+    width: 28vw;
+    left: 10%;
+    top: 50px;
+  }
+  
+  .similar {
+    grid-area: 2 / 2 / 5 / 3; 
+    position: relative;
+    width: 28vw;
+    left: 10%;
+  }
+  
+  .Bigdisplay { 
+    grid-area: 1 / 1 / 2 / 4; 
+    display: flex;
+    flex-flow: 1;
+    justify-content: end;
+  }
+  
+  .smalldisplay1 { 
+    grid-area: 2 / 1 / 3 / 2;
+  }
+  
+  .smalldisplay2 { 
+    grid-area: 2 / 2 / 3 / 3; 
+  }
+  
+  .smalldisplay3 { 
+    grid-area: 2 / 3 / 3 / 4;
+  }
+
+  #bimg {
+    width: 47vw;
+  }
+  
+  .smd {
+    position: relative;
+    top: 4%;
+    left: 8%;
+    width: 89%;
+  }
+
+  #thumbnails {
+    position: absolute;
+    left: 1%;
+    right: 0%;
+    top: auto;
+    right: 0%;
+  }
+  
+  .specigrid {  display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-auto-columns: 1fr;
+    gap: 20px 0px;
+  }
+  
+  .speci {
+    position: relative;
+    top: 60%;
+    left: 0%;
+    padding-top: 4.5%;
+    padding-left: 10%;
+    height: 6.5vh;
+    width: 40vw;
+    font-family: Garamond;
+    font-size: 20px;
+    color: #d7ca89;
+    background-image: linear-gradient(90deg, #0e0e0e, #000 50%, #0e0e0e);
+  }
+
+  .speciarrow {
+    position: absolute;
+    top: 38%;
+    left: 95%;
+  }
+
+  .ExteriorSpec { 
+    grid-area: 1 / 1 / 2 / 2; 
+  }
+  
+  .InteriorSpec { 
+    grid-area: 2 / 1 / 3 / 2; 
+  }
+  
+  .SafetyFeat {
+     grid-area: 3 / 1 / 4 / 2; 
+  }
+  
+  #Discl {
+    position: relative;
+    top: -10%;
+    left: 10%;
+    font-family: Garamond;
+    font-size: 20px;
+    color: #d7ca89;
+  }
+
+  #disp {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    top: 0%;
+    left: 10%;
+    padding-right: 16%;
+    font-family: Garamond;
+    font-size: 14px;
+    letter-spacing: 2px;
+    text-align: justify;
+    color: #d7ca89;
+  }
+
+  .checkout {  
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-auto-columns: 1fr;
+    gap: 0px 0px;
+    grid-auto-flow: row;
+  }
+
+  .bu {
+    position: relative;
+    height: 3.5vw;
+    border: 2px solid #d7ca89;
+    background-color: transparent;
+    border-radius: 40px;
+    font-family: Garamond;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+  }
+
+  .bu:hover {
+    background-color: #d7ca89;
+  }
+  
+  .model { 
+    grid-area: 1 / 1 / 2 / 3; 
+  }
+  
+  .price { 
+    grid-area: 2 / 1 / 3 / 2; 
+  }
+  
+  .miles { 
+    grid-area: 2 / 2 / 3 / 3; 
+  }
+  
+  .reserve { 
+    grid-area: 3 / 1 / 4 / 3; 
+    width: 15vw;
+  }
+  
+  .preapproved { 
+    grid-area: 4 / 1 / 5 / 3;
+    top: -20%;
+    width: 20vw;
+  }
+  
+  .report {
+    grid-area: 5 / 1 / 6 / 3; 
+    top: -40%;
+    width: 20vw;
+  }
+
+  #checkoutsaved {
+    position: absolute;
+    left: auto;
+    right: 1%;
+    top: 0.5%;
+    bottom: auto;
+    width: 35px;
+  }
+  
+  .popup {
+    overflow: hidden;
+    position: fixed;
+    top: 11vh;
+    left: 30vw;
+    z-index: 1;
+    width: 35vw;
+    height: 43vw;
+    border-radius: 40px;
+    box-shadow: 0 0 0 100vmax rgb(0,0,0,.4);
+  }
+
+  #reserve-popup {
+    display: none;
+  }
+
+  #close-popup {
+    position: absolute;
+    top: 5%;
+    bottom: auto;
+    right: auto;
+    left: 5%; 
+    width: 1.5vw;
+    cursor: pointer;
+  }
+
+  .confirm-popup {
+    position: relative;
+    top: -24%;
+    left: 32%;
+    height: 4vw;
+    width: 20vh;
+    border: 2px solid #d7ca89;
+    background-color: transparent;
+    border-radius: 40px;
+    font-family: Garamond;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+  }
+
+  .confirm-popup:hover {
+    background-color: #d7ca89;
+  }
+
+  #recorded {
+    overflow: hidden;
+    position: fixed;
+    top: 11vh;
+    left: 30vw;
+    z-index: 1;
+    width: 35vw;
+    height: 43vw;
+    border-radius: 40px;
+    box-shadow: 0 0 0 100vmax rgb(0,0,0,.4);
+    display: none;
+  }
